refactor: GroupService의 findNewGroups() 메서드에서 province를 결정하는 로직 메서드로 추출